--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,78 @@
+accelerate==1.1.1
+adapters==1.0.1
+appnope==0.1.4
+asttokens==2.4.1
+backports.functools-lru-cache==2.0.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
+click==8.1.7
+comm==0.2.2
+debugpy==1.8.9
+decorator==5.1.1
+executing==2.1.0
 filelock==3.16.1
 fsspec==2024.10.0
 huggingface-hub==0.26.2
 idna==3.10
+indic-transliteration==2.3.68
+ipykernel==6.29.5
+ipython==8.29.0
+ipywidgets==8.1.5
+jedi==0.19.2
 Jinja2==3.1.4
 joblib==1.4.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyterlab_widgets==3.0.13
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
 mpmath==1.3.0
+nest-asyncio==1.6.0
 networkx==3.4.2
 numpy==2.1.3
 packaging==24.2
 pandas==2.2.3
+parso==0.8.4
+peft==0.13.2
+pexpect==4.9.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.48
+protobuf==5.28.3
+psutil==6.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.18.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
+pyzmq==26.2.0
 regex==2024.11.6
 requests==2.32.3
+rich==13.9.4
+roman==4.2
 safetensors==0.4.5
 scikit-learn==1.5.2
 scipy==1.14.1
+sentencepiece==0.2.0
 setuptools==75.6.0
+shellingham==1.5.4
 six==1.16.0
+stack-data==0.6.3
 sympy==1.13.1
 threadpoolctl==3.5.0
+tiktoken==0.8.0
 tokenizers==0.20.3
+toml==0.10.2
 torch==2.5.1
+tornado==6.4.2
 tqdm==4.67.0
-transformers==4.46.3
+traitlets==5.14.3
+transformers==4.45.2
+typer==0.14.0
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+wcwidth==0.2.13
+widgetsnbextension==4.0.13
